--- a/Servers/Organization API/docker-compose.yml
+++ b/Servers/Organization API/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     depends_on: 
         - myteamshub.mssql.server
         - myteamshub.postgresql.server
+        - myteamshub.rabbitmq
     ports:
         - 4000:4000
         - 4001:4001
@@ -33,9 +34,9 @@ services:
       MSSQL_TLS_CERTIFICATE: "/var/opt/mssql/cert/mssql.crt"
       MSSQL_TLS_KEY: "/var/opt/mssql/cert/mssql.key"
       MSSQL_TLS_CA: "/var/opt/mssql/cert/mssql.crt"
-    # volumes:
-    #   - ./infra/mssql/mssql.crt:/var/opt/mssql/cert/mssql.crt
-    #   - ./infra/mssql/mssql.key:/var/opt/mssql/cert/mssql.key
+    volumes:
+      - ./infra/mssql/mssql.crt:/var/opt/mssql/cert/mssql.crt
+      - ./infra/mssql/mssql.key:/var/opt/mssql/cert/mssql.key
     networks:
       - myteamshub-network
 
@@ -46,8 +47,8 @@ services:
       - POSTGRES_DB=test
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    # volumes:
-    #   - ./infra/postgresql/temp_pg_data:/var/lib/postgresql/data
+    volumes:
+      - ./infra/postgresql/temp_pg_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -74,18 +75,18 @@ services:
     networks:
       - myteamshub-network
 
-  # create-new-team-listener:
-  #   build:
-  #     context: .
-  #     dockerfile: src/MyTeamsHub.CreateNewTeam.Listener/Dockerfile
-  #   container_name: myteamshub-create-new-team-listener
-  #   depends_on:
-  #     - myteamshub.rabbitmq
-  #   environment:
-  #     - ASPNETCORE_ENVIRONMENT=Development
-  #   networks:
-  #     - myteamshub-network
-  #   restart: always
+  create-new-team-listener:
+    build:
+      context: .
+      dockerfile: src/MyTeamsHub.CreateNewTeam.Listener/Dockerfile
+    container_name: myteamshub-create-new-team-listener
+    depends_on:
+      - myteamshub.rabbitmq
+    environment:
+      - DOTNET_ENVIRONMENT=Development
+    networks:
+      - myteamshub-network
+    restart: always
 
 networks:
   myteamshub-network:
