Added timeout and rate limiting policies

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -7,14 +7,14 @@
   },
   "ReverseProxy": {
     "Routes": {
-      "route1": {
-        "ClusterId": "default",
+      "default-route": {
+        "ClusterId": "default-cluster",
         "Match": {
           "Path": "/api/v1/nomenclatures/{**catch-all}"
         }
       },
-      "route2": {
-        "ClusterId": "organizations",
+      "organizations-route": {
+        "ClusterId": "organizations-cluster",
         "Match": {
           "Path": "/organizations"
         },
@@ -22,10 +22,12 @@
           {
             "PathPrefix": "/api/v1"
           }
-        ]
+        ],
+        "RateLimiterPolicy": "default-rate-limiter-policy",
+        "TimeoutPolicy": "default-timeout-policy"
       },
-      "users": {
-        "ClusterId": "users",
+      "users-route": {
+        "ClusterId": "users-cluster",
         "Match": {
           "Path": "/users"
         },
@@ -37,7 +39,7 @@
       }
     },
     "Clusters": {
-      "default": {
+      "default-cluster": {
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
@@ -51,14 +53,14 @@
           }
         }
       },
-      "organizations": {
+      "organizations-cluster": {
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:4000"
           }
         }
       },
-      "users": {
+      "users-cluster": {
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:4000"
