Added docker compose to yarp gateway project. Configuration changes for using same network

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -43,27 +43,27 @@
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:4000"
+            "Address": "http://myteamshub.organization.api:4000"
           },
           "destination2": {
-            "Address": "http://localhost:4000"
+            "Address": "http://myteamshub.organization.api:4000"
           },
           "destination3": {
-            "Address": "http://localhost:4000"
+            "Address": "http://myteamshub.organization.api:4000"
           }
         }
       },
       "organizations-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:4000"
+            "Address": "http://myteamshub.organization.api:4000"
           }
         }
       },
       "users-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:4000"
+            "Address": "http://myteamshub.organization.api:4000"
           }
         }
       }
