--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/MyTeamsHub.Yarp.Gateway.API.csproj
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/MyTeamsHub.Yarp.Gateway.API.csproj
@@ -4,9 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>21eb6ad3-eeb5-4370-8a05-cb8b98342b3e</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
   </ItemGroup>
 
