Health check configrations on proxy level

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -6,11 +6,16 @@
     }
   },
   "ReverseProxy": {
+    "HealthCheckOptions": {
+      "DetectionWindowSize": "00:00:30",
+      "MinimalTotalCountThreshold": 5,
+      "DefaultFailureRateLimit": 0.5
+    },
     "Routes": {
       "default-route": {
         "ClusterId": "default-cluster",
         "Match": {
-          "Path": "/api/v1/nomenclatures/{**catch-all}"
+          "Path": "{**catch-all}"
         }
       },
       "organizations-route": {
@@ -40,6 +45,15 @@
     },
     "Clusters": {
       "default-cluster": {
+        "HealthCheck": {
+          "Active": {
+            "Enabled": true,
+            "Interval": "00:00:10",
+            "Timeout": "00:00:10",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/api/health"
+          }
+        },
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
