--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -20,6 +20,7 @@
       },
       "organizations-route": {
         "ClusterId": "organizations-cluster",
+        "OutputCachePolicy": "default-cache-policy",
         "Match": {
           "Path": "/organizations"
         },
