Moved authentication and authorization logic with JWT to gateway level

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -14,6 +14,7 @@
     "Routes": {
       "default-route": {
         "ClusterId": "default-cluster",
+        "AuthorizationPolicy": "Nomenclatures",
         "Match": {
           "Path": "{**catch-all}"
         }
@@ -21,6 +22,7 @@
       "organizations-route": {
         "ClusterId": "organizations-cluster",
         "OutputCachePolicy": "default-cache-policy",
+        "AuthorizationPolicy": "AuthenticatedOnly",
         "Match": {
           "Path": "/organizations"
         },
@@ -34,6 +36,7 @@
       },
       "users-route": {
         "ClusterId": "users-cluster",
+        "AuthorizationPolicy": "AuthenticatedOnly",
         "Match": {
           "Path": "/users"
         },
