Playing with authorization and route transformation on gateway level

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -45,6 +45,18 @@
             "PathPrefix": "/api/v1"
           }
         ]
+      },
+      "external-route": {
+        "ClusterId": "default-cluster",
+        "AuthorizationPolicy": "ApiKey",
+        "Match": {
+          "Path": "/teams-hub/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPrefix": "/api/v1{request.path}"
+          }
+        ]
       }
     },
     "Clusters": {
