Gateway route configuration changes

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -24,7 +24,7 @@
         "OutputCachePolicy": "default-cache-policy",
         "AuthorizationPolicy": "AuthenticatedOnly",
         "Match": {
-          "Path": "/organizations"
+          "Path": "/organizations/{**catch-all}"
         },
         "Transforms": [
           {
@@ -47,14 +47,14 @@
         ]
       },
       "external-route": {
-        "ClusterId": "default-cluster",
+        "ClusterId": "external-organizations-cluster",
         "AuthorizationPolicy": "ApiKey",
         "Match": {
-          "Path": "/teams-hub/{**catch-all}"
+          "Path": "/teams-hub/organizations/{**catch-all}"
         },
         "Transforms": [
           {
-            "PathPrefix": "/api/v1{request.path}"
+            "PathSet": "/api/v1/organizations"
           }
         ]
       }
@@ -91,6 +91,13 @@
         }
       },
       "users-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://myteamshub.organization.api:4000"
+          }
+        }
+      },
+      "external-organizations-cluster": {
         "Destinations": {
           "destination1": {
             "Address": "http://myteamshub.organization.api:4000"
