--- a/Servers/Identity API/src/MyTeamsHub.IdentityServer.API/MyTeamsHub.IdentityServer.API.csproj
+++ b/Servers/Identity API/src/MyTeamsHub.IdentityServer.API/MyTeamsHub.IdentityServer.API.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="7.1.1" />
+    <PackageReference Include="Keycloak.Net.Core" Version="1.0.33" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
