--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -12,9 +12,17 @@
       "DefaultFailureRateLimit": 0.5
     },
     "Routes": {
+      "keycloak": {
+        "ClusterId": "keycloak-cluster",
+        "Match": {
+          "Path": "/auth/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/auth" }
+        ]
+      },
       "default-route": {
         "ClusterId": "default-cluster",
-        "AuthorizationPolicy": "Nomenclatures",
         "Match": {
           "Path": "{**catch-all}"
         }
@@ -36,6 +44,7 @@
       },
       "users-route": {
         "ClusterId": "users-cluster",
+        "OutputCachePolicy": "default-cache-policy",
         "AuthorizationPolicy": "AuthenticatedOnly",
         "Match": {
           "Path": "/users"
@@ -45,31 +54,19 @@
             "PathPrefix": "/api/v1"
           }
         ]
-      },
-      "external-route": {
-        "ClusterId": "external-organizations-cluster",
-        "AuthorizationPolicy": "ApiKey",
-        "Match": {
-          "Path": "/teams-hub/organizations/{**catch-all}"
-        },
-        "Transforms": [
-          {
-            "PathSet": "/api/v1/organizations"
-          }
-        ]
       }
     },
     "Clusters": {
       "default-cluster": {
-        "HealthCheck": {
-          "Active": {
-            "Enabled": true,
-            "Interval": "00:00:10",
-            "Timeout": "00:00:10",
-            "Policy": "ConsecutiveFailures",
-            "Path": "/api/health"
-          }
-        },
+        //"HealthCheck": {
+        //  "Active": {
+        //    "Enabled": true,
+        //    "Interval": "00:00:10",
+        //    "Timeout": "00:00:10",
+        //    "Policy": "ConsecutiveFailures",
+        //    "Path": "/api/health"
+        //  }
+        //},
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
@@ -97,10 +94,10 @@
           }
         }
       },
-      "external-organizations-cluster": {
+      "keycloak-cluster": {
         "Destinations": {
-          "destination1": {
-            "Address": "http://myteamshub.organization.api:4000"
+          "keycloak": {
+            "Address": "http://identity-server-keycloak:8080"
           }
         }
       }
