Routing and health check fixes on gateway level

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -15,10 +15,12 @@
       "keycloak": {
         "ClusterId": "keycloak-cluster",
         "Match": {
-          "Path": "/auth/{**catch-all}"
+          "Path": "/auth/realms/{realm}/token"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/auth" }
+          {
+            "PathPattern": "/realms/{realm}/protocol/openid-connect/token"
+          }
         ]
       },
       "default-route": {
@@ -47,7 +49,7 @@
         "OutputCachePolicy": "default-cache-policy",
         "AuthorizationPolicy": "AuthenticatedOnly",
         "Match": {
-          "Path": "/users"
+          "Path": "/users/{**catch-all}"
         },
         "Transforms": [
           {
@@ -58,15 +60,15 @@
     },
     "Clusters": {
       "default-cluster": {
-        //"HealthCheck": {
-        //  "Active": {
-        //    "Enabled": true,
-        //    "Interval": "00:00:10",
-        //    "Timeout": "00:00:10",
-        //    "Policy": "ConsecutiveFailures",
-        //    "Path": "/api/health"
-        //  }
-        //},
+        "HealthCheck": {
+          "Active": {
+            "Enabled": true,
+            "Interval": "00:00:10",
+            "Timeout": "00:00:10",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/health"
+          }
+        },
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
