Expose graphql API from organization API

--- a/.gitignore
+++ b/.gitignore
@@ -364,6 +364,7 @@ FodyWeavers.xsd
 
 # Ignoring Volumes from PostgreSQL
 /Servers/Organization API/infra/postgresql/temp_pg_data
+/Servers/Review API/infra/mongodb
 
 # Ignoring Volumes from Keycloak
 /Servers/Identity API/.temp
