--- a/Servers/Organization API/src/MyTeamsHub.Organization.API/MyTeamsHub.Organization.API.csproj
+++ b/Servers/Organization API/src/MyTeamsHub.Organization.API/MyTeamsHub.Organization.API.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" />
+    <PackageReference Include="HotChocolate.AspNetCore" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
