Played with GraphQL and exposed graphql endpoint from YARP gateway

--- a/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
+++ b/Servers/Yarp Gateway/src/MyTeamsHub.Yarp.Gateway.API/appsettings.Development.json
@@ -44,6 +44,20 @@
         "RateLimiterPolicy": "default-rate-limiter-policy",
         "TimeoutPolicy": "default-timeout-policy"
       },
+      "organizations-query-route": {
+        "ClusterId": "organizations-cluster",
+        //"AuthorizationPolicy": "AuthenticatedOnly",
+        "Match": {
+          "Path": "/graphql",
+          "Methods": [ "GET", "POST" ]
+        },
+        "Transforms": [
+          {
+            "RequestHeader": "X-Forwarded-Host",
+            "Append": "true"
+          }
+        ]
+      },
       "users-route": {
         "ClusterId": "users-cluster",
         "OutputCachePolicy": "default-cache-policy",
